<resources>
    <string name="app_name">Notes Sync</string>
    <string name="title">Title</string>
    <string name="write_something">Write something&#8230;</string>
    <string name="sync">Sync notes</string>
    <string name="app_key" translatable="false">YOUR_APP_KEY_HERE</string>
    <string name="archive">Archive</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_forever">Delete forever</string>
    <string name="question_delete_forever">Are you sure you want to delete this note forever?</string>
    <string name="action_restore">Restore</string>
    <string name="view_compact">Compact view</string>
    <string name="view_simple">Simple view</string>
    <string name="share">Share</string>
    <string name="set_reminder">Set reminder</string>
    <string name="cancel_reminder_button">Cancel reminder button</string>
    <string name="app_version">App version</string>
    <string name="rate">Rate</string>
    <string name="rate_pref_summary">Leave a positive rating on Google Play if you liked Notes Sync</string>
    <string name="report_bugs">Report bugs</string>
    <string name="report_bugs_pref_summary">Report bugs, request new features or say Hi!</string>
    <string name="translate">Translate</string>
    <string name="translate_pref_summary">Help me translate Notes Sync to your native language</string>
    <string name="more_apps">More apps</string>
    <string name="more_apps_prefs_summary">Check out my other applications on Google Play</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_pref_summary">View the changelog of Notes Sync</string>
    <string name="developer">Developer</string>
    <string name="developer_summary">Kumar Manas</string>
    <string name="select_cloud_storage">Choose your preferred cloud storage</string>
    <string name="google_drive">Google Drive</string>
    <string name="dropbox">Dropbox</string>
    <string name="new_note">Take a note&#8230;</string>
    <string name="new_list">New List</string>
    <string name="search_button">Search button</string>
    <string name="more_options">More options</string>
    <string name="resources_used">List of resources used in Notes Sync</string>
    <string name="search_notes">Search your notes&#8230;</string>
    <string name="no_match_found">No match found</string>
    <string name="preferences">Preferences</string>
    <string name="app_theme">App Theme</string>
    <string name="logout">Logout</string>
    <string name="logout_prefs_summary">Logout from your cloud storage account</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="about_pref_summary">Get details about the app</string>
    <string name="open_source">Open source</string>
    <string name="resources">Resources</string>
    <string name="resources_pref_summary">All libraries and resources used</string>
    <string name="open_source_prefs_summary">Contribute to the project on GitHub</string>
    <string name="dropbox_logout_text">Logout from your Dropbox account</string>
    <string name="gdrive_logout_text">Logout from your Google Drive account</string>
    <string name="dropbox_logout_question">Are you sure you want to logout from your Dropbox account?</string>
    <string name="gdrive_logout_question">Are you sure you want to logout from your Google Drive account?</string>
    <string name="login">Login</string>
    <string name="login_pref_summary">Login to your preferred cloud storage</string>
    <string name="check_encryption_loading_text">Checking&#8230;</string>
    <string name="enter_password_to_decrypt_message">Encryption found. Please enter your password to decrypt your data</string>
    <string name="will_user_encrypt_message">Would you like to encrypt your data?</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="enter_old_pin">Enter old PIN</string>
    <string name="re_enter_pin">Re-enter PIN</string>
    <string name="archived_empty_message">Archived notes appear here</string>
    <string name="trash_empty_message">Deleted notes appear here for 30 days</string>
    <string name="edited_time_stamp">Edited %1$s</string>
    <string name="archive_note">Archive note</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="unarchive_note">Unarchive note</string>
    <string name="reminder_set">Reminder set:\n%1$s</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="change_password">Change password</string>
    <string name="change_password_summary">Change the password used to encrypt your data in the cloud.</string>
    <string name="warning_password">Warning: If you forget this password there will be no way to recover your data!</string>
    <string name="submit">Submit</string>
    <string name="enable_encrypted_sync">Enable encrypted sync</string>
    <string name="encrypted_sync_summary">Set a sync password to encrypt your data in the cloud. This is to improve privacy.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support_development">Support Development</string>
    <string name="menu_share_app">Share app</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="all_empty_message">Oops, nothing here</string>
    <string name="toast_copy_done">Done</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_question">Are you sure you want to delete this note?</string>
    <string name="take_photo">Take a photo</string>
    <string name="add_image">Add Image</string>
    <string name="new_image">New Image</string>
    <string name="new_image_note">New image note</string>
    <string name="pick_image">Pick an image</string>
    <string name="processing_image">Processing image&#8230;</string>
    <string name="delete_image">Delete</string>
    <string name="delete_image_question">Are you sure you want to delete this image?</string>
    <string name="add_item">Add item</string>
    <string name="empty_trash">Empty trash</string>
    <string name="empty_trash_question">Are you sure you want to permanently delete all notes in trash?</string>
    <string name="pick_theme">Pick a theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="amoled">Amoled</string>
    <string name="app_lock">App lock</string>
    <string name="app_lock_button">Enable app lock</string>
    <string name="app_lock_summary">Set a PIN to lock the app.</string>
    <string name="clear_button">Clear</string>
    <string name="change_pin">Change app lock PIN</string>
    <string name="change_pin_summary">Change the PIN used to lock the app.</string>
    <string name="toast_enable_app_lock_first">Please enable app lock first</string>
    <string name="toast_pins_dont_match">PINs don\'t match. Try again</string>
    <string name="toast_old_pins_incorrect">Old PIN incorrect. Try again</string>
    <string name="toast_pin_incorrect">PIN incorrect. Try again</string>
    <string name="toast_please_login_first">Please login first</string>
    <string name="toast_login_successful">Login successful</string>
    <string name="toast_passwords_dont_match">Passwords do not match</string>
    <string name="toast_enter_password">Please enter a password</string>
    <string name="toast_password_changed">Password changed</string>
    <string name="toast_password_invalid">Incorrect password</string>
    <string name="toast_old_password_invalid">Old password is invalid!</string>
    <string name="toast_no_browser">No browser found!</string>
    <string name="toast_no_camera_app">No camera app found!</string>
    <string name="toast_moved_to_trash">Moved to trash</string>
    <string name="toast_success">Success</string>
    <string name="toast_error">Error occurred</string>
    <string name="toast_network_error">Network error</string>
    <string name="support_title">Support Development</string>
    <string name="support_1">Iced Lemon Tea</string>
    <string name="support_1_summary">Buy me an Iced Lemon Tea. Cheap and tasty, why not?</string>
    <string name="support_1_amount">USD 1</string>
    <string name="support_2">Coffee</string>
    <string name="support_2_summary">Buy me a coffee to keep me awake during my late night coding sessions</string>
    <string name="support_2_amount">USD 2</string>
    <string name="support_3">Apple Cider</string>
    <string name="support_3_summary">Buy me an apple cider. This will make my day</string>
    <string name="support_3_amount">USD 3</string>
    <string name="support_4">Meal</string>
    <string name="support_4_summary">Buy me a meal. I get hungry easily, feed me</string>
    <string name="support_4_amount">USD 5</string>
    <string name="support_5">Premium Meal</string>
    <string name="support_5_summary">Buy me a premium meal if you think I deserve it</string>
    <string name="support_5_amount">USD 10</string>
    <string name="enter_pin">Enter PIN to unlock</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="warning">Warning!</string>
    <string name="encryption_warning">Encryption may take some time. The process should not be interrupted. Make sure you have a steady internet connection. Do you want to proceed?</string>
    <string name="encryption_warning_exit">Encryption process should not be interrupted. It may cause loss of data. Exit anyway?</string>
    <string name="cancel_reminder">Cancel reminder</string>
    <string name="cancel_reminder_question">Are you sure you want to cancel the reminder?</string>
</resources>