<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sync_menu_item"
        android:icon="@drawable/sync_notes_tinted"
        android:orderInCategory="4"
        android:title="@string/sync"
        app:showAsAction="always" />

    <item
        android:id="@+id/compact_view_menu_item"
        android:icon="@drawable/compact_view_tinted"
        android:orderInCategory="3"
        android:title="@string/view_compact"
        app:showAsAction="always" />

    <item
        android:id="@+id/simple_view_menu_item"
        android:icon="@drawable/simple_view_tinted"
        android:orderInCategory="2"
        android:title="@string/view_simple"
        app:showAsAction="always" />

    <item
        android:id="@+id/empty_trash_menu_item"
        android:icon="@drawable/empty_trash_icon_tinted"
        android:orderInCategory="1"
        android:title="@string/empty_trash"
        app:showAsAction="ifRoom" />
</menu>