<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/mainBackground"
              tools:context=".Fragments.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/mainBackground"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/preferences"
                    style="@style/prefsCategoryTitle"/>

            <LinearLayout
                    android:id="@+id/night_mode_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:src="@drawable/pref_change_theme_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:text="@string/app_theme"
                            style="@style/prefsMain"/>

                    <TextView
                            android:id="@+id/pref_theme_text"
                            style="@style/prefsSummary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/logout_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:id="@+id/logout_icon"
                        android:src="@drawable/logout_prefs_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:id="@+id/logout_title"
                            android:text="@string/logout"
                            style="@style/prefsMain"/>

                    <TextView
                            android:id="@+id/logout_text"
                            android:text="@string/logout_prefs_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/change_pass_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:id="@+id/change_pass_icon"
                        android:src="@drawable/password_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:id="@+id/change_pass_title"
                            android:text="@string/change_password"
                            style="@style/prefsMain"/>

                    <TextView
                            android:id="@+id/change_pass_text"
                            android:text="@string/change_password_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/preview_lines_count_button"
                style="@style/prefsContainer">

                <ImageView
                    android:src="@drawable/lines_count_icon"
                    style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                        android:text="Number of lines in preview"
                        style="@style/prefsMain"/>

                    <TextView
                        android:text="Number of lines in the preview of a note's content"
                        style="@style/prefsSummary"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/preview_lines_count_text"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:text="Checklist"
                style="@style/prefsCategoryTitle"/>

            <LinearLayout
                android:id="@+id/move_bottom_button"
                style="@style/prefsContainer">

                <ImageView
                    android:src="@drawable/move_checked_bottom_icon"
                    style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                        android:text="Move checked to the bottom"
                        style="@style/prefsMain"/>

                    <TextView
                        android:text="Move checked item in the checklist to the bottom of the list"
                        style="@style/prefsSummary"/>

                </LinearLayout>

                <Switch
                    android:id="@+id/move_bottom_toggle"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:text="@string/app_lock"
                    style="@style/prefsCategoryTitle"/>

            <LinearLayout
                    android:id="@+id/app_lock_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:src="@drawable/lock_pref_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:text="@string/app_lock_button"
                            style="@style/prefsMain"/>

                    <TextView
                            android:text="@string/app_lock_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>

                <Switch
                        android:id="@+id/app_lock_toggle"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/change_pin_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:src="@drawable/password_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:text="@string/change_pin"
                            style="@style/prefsMain"/>

                    <TextView
                            android:text="@string/change_pin_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:text="@string/other"
                    style="@style/prefsCategoryTitle"/>

            <LinearLayout
                    android:id="@+id/about_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:src="@drawable/about_drawer_item"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:text="@string/about"
                            style="@style/prefsMain"/>

                    <TextView
                            android:text="@string/about_pref_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/resources_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:src="@drawable/resources_pref_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:text="@string/resources"
                            style="@style/prefsMain"/>

                    <TextView
                            android:text="@string/resources_pref_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/open_source_button"
                    style="@style/prefsContainer">

                <ImageView
                        android:src="@drawable/open_source_pref_icon"
                        style="@style/prefsIcon"/>

                <LinearLayout style="@style/prefsTextContainer">

                    <TextView
                            android:text="@string/open_source"
                            style="@style/prefsMain"/>

                    <TextView
                            android:text="@string/open_source_prefs_summary"
                            style="@style/prefsSummary"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>