<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/support_title"
        android:textSize="22sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/mainTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/iced_tea"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/main_simple_ripple"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/support_1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="?attr/mainTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/support_1_summary"
                        android:singleLine="false"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:text="@string/support_1_amount"
                    android:singleLine="true"
                    android:textColor="?attr/mainTextColor"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coffee"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/main_simple_ripple"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/support_2"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="?attr/mainTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/support_2_summary"
                        android:singleLine="false"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:text="@string/support_2_amount"
                    android:singleLine="true"
                    android:textColor="?attr/mainTextColor"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/apple_cider"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/main_simple_ripple"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/support_3"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="?attr/mainTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/support_3_summary"
                        android:singleLine="false"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:text="@string/support_3_amount"
                    android:singleLine="true"
                    android:textColor="?attr/mainTextColor"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/meal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/main_simple_ripple"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/support_4"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="?attr/mainTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/support_4_summary"
                        android:singleLine="false"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:text="@string/support_4_amount"
                    android:singleLine="true"
                    android:textColor="?attr/mainTextColor"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/premium_meal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/main_simple_ripple"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/support_5"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="?attr/mainTextColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/support_5_summary"
                        android:singleLine="false"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:text="@string/support_5_amount"
                    android:singleLine="true"
                    android:textColor="?attr/mainTextColor"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>