<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/new_note_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="#252629"
        android:tint="#ffffff"
        android:contentDescription="@string/new_note"
        android:padding="8dp"
        android:src="@drawable/widget_new_note" />

    <ImageView
        android:id="@+id/new_list_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="#252629"
        android:tint="#ffffff"
        android:contentDescription="@string/new_list"
        android:foregroundGravity="center"
        android:padding="8dp"
        android:src="@drawable/new_list" />

    <ImageView
        android:id="@+id/new_image_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="#252629"
        android:tint="#ffffff"
        android:contentDescription="@string/new_image"
        android:foregroundGravity="center"
        android:padding="8dp"
        android:src="@drawable/new_image_note" />

</LinearLayout>